--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
 	"require-dev": {
 		"nunomaduro/collision": "dev-stable",
 		"orchestra/testbench": "^6.18.0",
-		"phpunit/phpunit": "^8.5.8|^9.3.3"
+		"phpunit/phpunit": "^8.5.8|^9.3.3",
+		"vlucas/phpdotenv": "5.3.x-dev"
 	},
 	"authors": [
 		{
